Update loading and prevent scrollbars

--- a/styles.css
+++ b/styles.css
@@ -16,4 +16,9 @@ Secondary Colors:
 body, html {
     margin: 0;
     padding: 0;
+    height: 100%;
+    overflow: hidden;
+}
+canvas {
+    display: block;
 }
